syntax = "proto3";

package notes;

import "google/protobuf/empty.proto";

option csharp_namespace = "SimpleNotes.GrpcServer";

message UUID {
  string value = 1;
}

message LabelIds {
  repeated UUID labelIds = 1;
}

service NotesService {
  rpc CreateNote(CreateNoteRequest) returns (google.protobuf.Empty);
  rpc DeleteNote(DeleteNoteRequest) returns (google.protobuf.Empty);
}

message CreateNoteRequest {
  string name = 1;
  string text = 2;
  optional UUID parentId = 3;
  optional LabelIds labelIds = 4;
}

message DeleteNoteRequest {
  UUID noteId = 1;
}